# youtube-scrape

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  scrape.py  transcript.py  trascript.py  youtube_videos.csv
.ipynb_checkpoints/: main-checkpoint.ipynb
output/: youtube_videos.csv
