[project]
name = "youtube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pytube>=15.0.0",
    "selenium>=4.28.1",
    "webdriver-manager>=4.0.2",
    "youtube-transcript-api>=0.6.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.241126",
]
